@@ -1,3 +1,7 @@
+2011-04-24  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * gem-button-box.gob : Fixed problem with spin-button set.
+
 2009-05-26  Dov Grobgeld  <dov.grobgeld@gmail.com>
 
 	* gem-button-box.gob : Solved problem of displaying names
